--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./docker/nginx/etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./.docker/nginx/etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./app/public:/usr/share/nginx/html
 
   node:
